--- a/mysql/mysql.yaml
+++ b/mysql/mysql.yaml
@@ -73,7 +73,7 @@ spec:
       namespace: expense
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "ebs-sc"
+      storageClassName: "ebs-storageclass"
       resources:
         requests:
           storage: 1Gi
