--- a/mysql/mysql.yaml
+++ b/mysql/mysql.yaml
@@ -77,3 +77,13 @@ spec:
       resources:
         requests:
           storage: 1Gi
+
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: ebs-storageclass
+  namespace: expense
+provisioner: ebs.csi.aws.com
+reclaimPolicy: Retain
+volumeBindingMode: WaitForFirstConsumer
