--- a/mysql/mysql.yaml
+++ b/mysql/mysql.yaml
@@ -72,8 +72,7 @@ spec:
       name: mysql
       namespace: expense
     spec:
-      accessModes: 
-        - ReadWriteOnce
+      accessModes: [ "ReadWriteOnce" ]
       storageClassName: "ebs-storageclass"
       resources:
         requests:
